Fixes scroll overflow on tabs accordion

--- a/assets/styles/components/_tabs-to-accordion.scss
+++ b/assets/styles/components/_tabs-to-accordion.scss
@@ -54,7 +54,6 @@ ul.tabs li.active {
 	clear: both;
 	float: left;
 	width: 100%;
-	overflow: auto;
   @include margin-trailer(2);
   .tab_content {
     display: block;
